--- a/src/scss/scss_basement/pages/home.scss
+++ b/src/scss/scss_basement/pages/home.scss
@@ -41,7 +41,7 @@
             h2{
                 // @include testing-border-1();
                 @include font-handwriting();
-                color: $color-primary;
+                color: var(--color-primary);
                 font-size: 4rem;
                 margin-bottom: .4rem;
                 // width: 0px;
@@ -56,7 +56,7 @@
                     content: '';
                     width: 100%;
                     height: 100%;
-                    background-color: $color-secondary;
+                    background-color: var(--color-secondary);
                     position: absolute;
                     right: 0;
                     animation: remove-width 1.5s forwards ease-in-out;
@@ -78,7 +78,7 @@
                     content: '';
                     width: 100%;
                     height: 100%;
-                    background-color: $color-secondary;
+                    background-color: var(--color-secondary);
                     position: absolute;
                     right: 0;
                     animation: remove-width 4s .3s forwards linear;
@@ -91,7 +91,7 @@
     // LEISTUNGEN
     //
     &_leistungen{
-        background-color: $color-primary;
+        background-color: var(--color-primary);
         position: relative;
 
         &::before,
@@ -99,7 +99,7 @@
             content: '';
             width: 80%;
             height: 2rem;
-            background-color: $color-primary;
+            background-color: var(--color-primary);
             position: absolute;
             top: -2rem;
             opacity: 0.7;
@@ -167,7 +167,7 @@
             width: 35rem;
             height: 35rem;
             margin: 2rem;
-            background-color: $color-primary-light-2;
+            background-color: var(--color-primary-light-2);
             // background-color: #fff;
             border-radius: 1rem;
             overflow: hidden;
@@ -218,7 +218,7 @@
                 }
     
                 h3{
-                    background-color: $color-secondary;
+                    background-color: var(--color-secondary);
                     margin: 0;
                     padding: .5rem;
                     text-align: center;
@@ -278,7 +278,7 @@
             }
 
             &_button{
-                background-color: $color-akzent;
+                background-color: var(--color-akzent);
                 width: 15rem;
                 text-align: center;
                 padding: .5rem;
@@ -286,7 +286,7 @@
                 @include box-shadow-default(rgba(0, 0, 0, 0.2));
                 position: absolute;
                 bottom: 1.5rem;
-                color: $color-on-akzent;
+                color: var(--color-on-akzent);
                 // z-index: 2;
                 transform-style: preserve-3d;
                 // transition: all .1s;
@@ -417,7 +417,7 @@
                 content: '';
                 width: 80%;
                 height: .5rem;
-                background-color: $color-secondary;
+                background-color: var(--color-secondary);
                 position: absolute;
                 border-radius: 0 1rem 1rem 0;
             }
@@ -457,7 +457,7 @@
     transition: all 2s;
 
     @media screen and (orientation: portrait) {
-        transform: perspective(1000px) rotateY(0) translateX(0);
+        transform: perspective(1000px) rotateY(0) translateX(0) scale(0.8);
         opacity: 0.2;
     }
 }
@@ -467,7 +467,7 @@
     transition: all 2s;
 
     @media screen and (orientation: portrait) {
-        transform: perspective(1000px) rotateY(0) translateX(0);
+        transform: perspective(1000px) rotateY(0) translateX(0) scale(0.8);
         opacity: 0.2;
     }
 }
@@ -478,7 +478,7 @@
     transition: all 2s;
 
     @media screen and (orientation: portrait) {
-        transform: perspective(1000px) rotateY(0) translateX(0);
+        transform: perspective(1000px) rotateY(0) translateX(0) scale(0.8);
         opacity: 0.2;
     }
 }
