change to a php project / working on services

--- a/src/scss/scss_basement/pages/common.scss
+++ b/src/scss/scss_basement/pages/common.scss
@@ -49,6 +49,8 @@ body{
 
     &_nav{
         flex-grow: 1;
+        height: 100%;
+
         @media screen and (max-width: 1350px) {
             display: none;
         }
