--- a/src/scss/scss_basement/pages/home.scss
+++ b/src/scss/scss_basement/pages/home.scss
@@ -210,6 +210,7 @@
                     width: 100%;
                     height: 12rem;
                     object-fit: cover;
+                    display: block;
                     // opacity: .02;
 
                     // @media screen and (max-width: 1184px) {
