--- a/src/scss/scss_basement/core/_font.scss
+++ b/src/scss/scss_basement/core/_font.scss
@@ -7,14 +7,6 @@
 // 'IMPORTS / @FONT_FACE'
 //
 
-@import url('https://fonts.googleapis.com/css2?family=Lekton&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
-
-
 
 // NUNITO
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
@@ -53,24 +45,10 @@
     font-weight: 400;
 }
 
-// @mixin font-heading-1{
-//     font-family: 'Amatic SC', cursive;
-//     font-weight: 700;
-// }
 
-// @mixin font-main{
-//     font-family: 'Lekton', sans-serif;
-//     font-weight: 400;
-// }
 
-// @mixin font-heading-2{
-//     font-family: 'Poiret One', cursive;
-//     font-weight: 400;
-//     text-shadow: 1px 1px 5px rgba($color: #000, $alpha: 0.5);
-// }
+// -----------------------
+// COMMON FONT STYLES
+// -----------------------
 
-// @mixin blockquote-font{
-//     font-family: 'Special Elite', cursive;
-//     font-weight: 400;
-// }
 
