--- a/src/scss/scss_basement/pages/common.scss
+++ b/src/scss/scss_basement/pages/common.scss
@@ -9,6 +9,10 @@
 // ### COMMON ###
 // --------------------------------------------------
 
+// html{
+//     scroll-behavior: smooth;
+// }
+
 body,
 a{
     @include font-main();
