--- a/src/scss/scss_basement/pages/home.scss
+++ b/src/scss/scss_basement/pages/home.scss
@@ -174,6 +174,10 @@
             @include flex-variable(column, nowrap, flex-start, center);
             position: relative;
 
+            @media screen and (min-width: 1550px){
+                flex-grow: 1;
+            }
+
 
             @media screen and (max-width: 1387px) {
                 width: 47%;
