--- a/src/scss/scss_basement/pages/services.scss
+++ b/src/scss/scss_basement/pages/services.scss
@@ -12,6 +12,10 @@
     &_reiter{
         border-top: 10px rgba(0, 0, 0, 0.1) double;
 
+        @media screen and (max-width: 1350px) {
+            display: none;
+        }
+
         &_list{
             @include flex-variable(row, wrap, flex-start, center);
             margin: 0;
@@ -25,11 +29,16 @@
                     padding: 0.8rem;
 
                     &:hover,
-                    &:focus{
+                    &:focus,
+                    &:active{
                         font-weight: bold;
                         background-color: var(--color-primary);
                     }
 
+                }
+
+                a.clicked{
+                    background-color: var(--color-primary);
                 }
                
             }
@@ -38,12 +47,88 @@
 
     // SERVICE
     &_service{
+        display: none;
+
+        @media screen and (max-width: 1350px) {
+            display: block;
+            // @include box-shadow-default(rgba(0,0,0,0.1));
+        }
+
+        &:target{
+            display: block;
+        }
+
+        .outer-heading{
+            display: none;
+            font-weight: normal;
+            font-size: 1.2rem;
+
+            @media screen and (max-width: 1350px) {
+                display: block;
+                padding: .5rem;
+                // border: solid var(--color-on-secondary-light);
+                // border-width: 1px 0;
+                margin: 0;
+                cursor: pointer;
+                box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+            }
+
+            &.active{
+                background-color: var(--color-primary-light-1);
+            }
+        }
+
+        &_content{
+            background-color: var(--color-secondary-variant);
+
+            @media screen and (max-width: 1350px){
+                display: none;
+            }
+        }
+
+        &_content.active{
+            display: block; 
+        }
+
         img{
             width: 100%;
             // height: 100vh;
             // object-fit: cover;
             filter: grayscale(1);
             opacity: .8;
+        }
+
+        &_text{
+            padding: 1rem;
+            width: 80%;
+            margin: 0 auto;
+
+            @media screen and (max-width: 600px){
+                padding: .2rem;
+                width: 90%;
+            }
+
+            h2, h3{
+                margin-left: -1rem;
+
+                @media screen and (max-width: 600px){
+                   margin-left: -.5rem;
+                }
+            }
+
+            ul li{
+                position: relative;
+                padding-left: 2rem;
+
+                &::before{
+                    content: '\2192';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    font-size: 1.3rem;
+                    opacity: .3;
+                }
+            }
         }
     }
 }
