add font size variables

--- a/src/scss/scss_basement/abstracts/_variables.scss
+++ b/src/scss/scss_basement/abstracts/_variables.scss
@@ -67,3 +67,12 @@ $color-font-fifth: #fff;
 
 $color-blue-dark: #0086E8;
 $color-blue-light: #7DE5FA;
+
+
+
+// --- FONT SIZES ---
+$font-size-normal: 1rem;
+$font-size-little-large: 1.3rem;
+$font-size-large: 1.5rem;
+$font-size-x-large: 2rem;
+$font-size-xx-large: 2.5rem;
