--- a/src/scss/scss_basement/pages/services.scss
+++ b/src/scss/scss_basement/pages/services.scss
@@ -6,6 +6,12 @@
         @include flex-row-center;
         @include font-heading-1;
         height: 20vh;
+
+        h1{
+            @media screen and (max-width: 380px) {
+                font-size: 1.6rem;
+            }
+        }
     }
 
     // REITER
