--- a/src/scss/scss_basement/core/_font.scss
+++ b/src/scss/scss_basement/core/_font.scss
@@ -26,8 +26,10 @@
 
 @mixin font-heading-1{
     font-family: 'Spectral SC', serif;
-    font-weight: 400;
+    // font-weight: 400;
     font-display: block;
+    font-weight: bold;
+    font-size: 2rem;
 }
 
 @mixin font-main{
