--- a/src/scss/scss_basement/pages/physical-therapy.scss
+++ b/src/scss/scss_basement/pages/physical-therapy.scss
@@ -1,1 +1,70 @@
 @import './common.scss';
+
+.physical-therapy{
+    // 
+    // HEADING
+    //
+    &_heading{
+        // @include testing-border-1;
+
+        &_img{
+            width: 100%;
+            height: 70vh;
+            object-fit: cover;
+            object-position: center;
+        }
+
+        &_headline{
+            height: 15vh;
+            background-color: var(--color-secondary);
+            @include box-shadow-default(rgba(0,0,0,0.2));
+            margin: -1rem auto 5rem;
+            @include flex-row-center;
+            @include font-heading-1;
+            // font-weight: bold;
+            // font-size: 2rem;
+        }
+    }
+
+    // 
+    // ROWS 
+    //
+    &_row{
+        width: 95%;
+        margin: auto;
+        @include flex-row-evenly;
+        margin-bottom: 5rem;
+        // border: 1px solid black;
+
+        // 
+        // SHORT DESCRIPTION
+        //
+        &.short-description{
+            // @include testing-border-1;
+
+            .description{
+                width: 40rem;
+                background-color: var(--color-primary);
+                padding: 1rem 2rem;
+            }
+        }
+
+        // 
+        // TRAINER
+        //
+        &.trainer{
+            img{
+                width: 20rem;
+                height: 20rem;
+                object-fit: cover;
+                border-radius: 50%;;
+            }
+
+            .about{
+                width: 40rem;
+                // background-color: var(--color-primary);
+                // padding: 1rem 2rem; 
+            }
+        }
+    }
+}
