--- a/src/scss/scss_basement/pages/services.scss
+++ b/src/scss/scss_basement/pages/services.scss
@@ -4,10 +4,11 @@
     // HEADER
     &_heading{
         @include flex-row-center;
-        @include font-heading-1;
+        // @include font-heading-1;
         height: 20vh;
 
         h1{
+            @include font-heading-1;
             @media screen and (max-width: 380px) {
                 font-size: 1.6rem;
             }
