--- a/src/scss/scss_basement/pages/office.scss
+++ b/src/scss/scss_basement/pages/office.scss
@@ -1,1 +1,186 @@
 @import './common.scss';
+
+.office{
+    min-height: calc(100svh - 5rem);
+    height: auto;
+    @include flex-variable(column, nowrap, space-between, center);
+
+    // @media screen and (max-width: 1180px) {
+    //     min-height: calc(100svh - 5rem);
+    //     height: auto;
+    // }
+
+    &_image-row{
+        @include flex-row-center;
+        width: 100%;
+
+        img{
+            width: 50%;
+            height: 30svh;
+            object-fit: cover;
+
+            @media screen and (max-width: 1180px) {
+                height: 20svh;
+            }
+
+            @media screen and (max-width: 550px) {
+                &:nth-of-type(1){
+                    flex-grow: 1;
+                }
+
+                &:nth-of-type(2){
+                    display: none;
+                }
+            }
+        }
+    }
+
+    &_content{
+        flex-grow: 1;
+        width: 100%;
+        @include flex-column-center;
+        margin-bottom: 2rem;
+        justify-content: space-evenly;
+
+
+        h2{
+            @include font-heading-1;
+            text-align: center;
+
+            @media screen and (max-width: 1180px) {
+                margin-bottom: 4rem;
+                margin-top: 3rem;
+            }
+
+            @media screen and (max-width: 550px) {
+                margin-top: 2rem;
+                margin-bottom: 3rem;
+            }
+        }
+
+        &_contact-details{
+            @include flex-variable(row, nowrap, space-evenly, center);
+            width: 100%;
+
+            @media screen and (max-width: 1180px) {
+                flex-wrap: wrap;
+                width: 70%;
+                align-items: stretch;
+            }
+
+            @media screen and (max-width: 440px) {
+               width: 90%;
+            }
+
+            .detail{
+                @include flex-row-center;
+                padding: .5rem;
+
+                @media screen and (max-width: 1180px) {
+                    width: 50%;
+                    margin-bottom: 2rem;
+
+                    &:nth-of-type(2),
+                    &:nth-of-type(4){
+                        img,
+                        a:has(img){
+                            order: 2;
+                            margin-left: 2rem;
+                            margin-right: initial;
+
+                            @media screen and (max-width: 860px) {
+                               order: -1;
+                               margin-right: 2rem;
+                               margin-left: 1rem;
+                            }
+                        }
+
+                        p{
+                            text-align: right;
+
+                            @media screen and (max-width: 860px) {
+                                text-align: right;
+                             }
+
+                        }
+                    }
+                }
+
+                @media screen and (max-width: 860px) {
+                    width: 80%;
+                    justify-content: space-between;
+                }
+
+                @media screen and (max-width: 570px) {
+                    width: 95%;
+                }
+                
+                @media screen and (max-width: 450px) {
+                    margin-bottom: 1rem;
+                }
+                
+                @media screen and (max-width: 440px) {
+                    width: 100%;
+                }
+
+
+                img{
+                    width: 4rem;
+                    margin: 1rem;
+                    margin-right: 2rem;
+
+                    @media screen and (max-width: 1000px) {
+                        width: 3rem;
+                    }
+
+                    @media screen and (max-width: 450px) {
+                        width: 2.5rem
+                    }
+                }
+
+                a:not(:has(img)),
+                p,
+                .adress{
+
+                    @media screen and (max-width: 1180px) {
+                        text-align: left;
+                        flex-grow: 1;
+                    }
+
+                    @media screen and (max-width: 860px) {
+                        text-align: right;
+                        flex-grow: 1;
+                    }
+                   
+                }
+
+            
+                a[rel] img{
+                    width: 3.3rem;
+
+                    @media screen and (max-width: 1000px) {
+                        width: 2.3rem;
+                    }
+
+                    @media screen and (max-width: 860px) {
+                        margin-left: .5rem;
+                    }
+
+                    @media screen and (max-width: 450px) {
+                        width: 1.8rem;
+                        margin-left: .3rem;
+                    }
+                }
+
+                .adress{
+                    // @include testing-border-2;
+
+                    p{
+                        margin: initial;
+                    }
+                }
+            }
+        }
+
+    }
+}
