--- a/src/scss/scss_basement/pages/e-medication.scss
+++ b/src/scss/scss_basement/pages/e-medication.scss
@@ -49,6 +49,7 @@
         h2{
             @include font-heading-1;
             text-align: center;
+           margin-top: 2rem;
 
             @media screen and (max-width: 1000px) {
                 margin: 1rem;
@@ -58,12 +59,12 @@
         p:not(.text-hint){
             background-color: var(--color-primary);
             padding: 1rem;
-            margin: 2rem auto;
-            margin-top: 3rem;
+            margin: 2rem auto 1rem;
+            // margin-top: 1rem;
             max-width: 40rem;
 
-            @media screen and (max-width: 1320px) {
-                margin-top: 2rem;
+            @media screen and (max-width: 1000px) {
+                margin-top: 1rem;
             }
         }
 
