--- a/src/scss/scss_basement/abstracts/_variables.scss
+++ b/src/scss/scss_basement/abstracts/_variables.scss
@@ -15,6 +15,8 @@
     --color-on-secondary: #000;
     --color-on-secondary-light: rgba(0, 0, 0, 0.3);
     --color-on-akzent: rgba(0, 0, 0, 0.5);
+
+    --color-akzent-2: #2EC4B6;
 }
 
 //
