--- a/src/scss/scss_basement/pages/alternate-ways.scss
+++ b/src/scss/scss_basement/pages/alternate-ways.scss
@@ -40,10 +40,19 @@
             // @include testing-border-2;
             // margin-bottom: 2rem;
 
+            @media screen and (max-width: 1000px) {
+                flex-direction: column;
+            }
+
             img{
                 width: 60%;
                 height: 80svh;
                 object-fit: cover;
+
+                @media screen and (max-width: 1000px) {
+                    height: 40svh;
+                    width: 100%;
+                }
             }
 
             h3{
@@ -60,6 +69,19 @@
             margin: 1rem auto;
             // border: solid var(--color-primary);
             // border-radius: 2rem;
+
+            @media screen and (max-width: 1520px) {
+                width: 90%;
+            }
+
+            @media screen and (max-width: 1340px) {
+                width: 95%;
+            }
+
+            @media screen and (max-width: 650px) {
+                padding: initial;
+                margin-top: 5rem;
+            }
 
             img{
                 width: 100%;
@@ -92,20 +114,39 @@
                 align-items: stretch;
                 margin: 1rem auto 2rem;
                 // @include flex-variable(column, nowrap, flex-start, center);
+                justify-content: center;
+                gap: 1.5rem;
+
+                @media screen and (max-width: 1000px) {
+                    gap: .5rem;
+                }
             }
 
             .on-the-point{
-                // background-color: var(--color-primary);
                 padding: 1rem;
                 max-width: 35rem;
                 @include flex-row-center;
                 border-radius: 2rem;
-                // margin-bottom: 2rem;
-
                 border: 2px solid var(--color-primary);
+
+                @media screen and (max-width: 1270px) {
+                    max-width: 45%;
+                }
+
+                @media screen and (max-width: 1000px) {
+                    max-width: 85%;
+                }
+
+                @media screen and (max-width: 860px) {
+                    max-width: 98%;
+                }
     
                 p{
                     color: var(--color-on-primary);
+
+                    @media screen and (max-width: 1270px) {
+                        max-width: 95%;
+                    }
 
                     &::first-letter{
                         font-size: 1.5rem;
@@ -120,18 +161,48 @@
 
             p{
                 max-width: 35rem;
+
+                @media screen and (max-width: 1270px) {
+                    max-width: 45%;
+                }
+
+                @media screen and (max-width: 1000px) {
+                    max-width: 80%;
+                }
+
+                @media screen and (max-width: 860px) {
+                    max-width: 96%;
+                }
             }
 
             a{
                 font-weight: bold;
                 text-decoration: underline;
                 position: relative;
-                margin-left: 3rem;
+                // margin-left: 3rem;
+
+                margin-left: calc(50% - 10rem);
+                display: inline-block;
+                margin-top: 2rem;
+                width: 20rem;
+                text-align: center;
+
+                @media screen and (max-width: 1000px) {
+                    margin-top: 1rem;
+                }
+
+                @media screen and (max-width: 580px) {
+                    margin-top: 0;
+                }
 
                 &::before{
                     position: absolute;
                     left: -2rem;
                     content: '\279C';
+
+                    @media screen and (max-width: 580px) {
+                        display: none
+                    }
                 }
 
                 &:hover{
@@ -151,13 +222,23 @@
         margin-top: 3rem;
         border-bottom: 5px double rgba(0,0,0,.1);
         padding-bottom: 2rem;
-
         @include flex-variable(row, nowrap, center, stretch);
+
+        @media screen and (max-width: 1000px) {
+            margin-top: .5rem;
+            flex-direction: column;
+        }
+
         
         &_left-side{
             width: 50%;
             // @include testing-border-2;
             @include flex-row-center;
+
+            @media screen and (max-width: 1000px) {
+                width: 98%;
+                margin: auto;
+            }
 
             img{
                 width: 90%;
@@ -165,6 +246,12 @@
                 object-fit: cover;
                 border-radius: 5rem 2rem;
                 max-height: 35rem;
+
+                @media screen and (max-width: 1000px) {
+                    width: 98%;
+                    border-radius: 0;
+                    height: 40svh;
+                }
             }
         }
 
@@ -172,6 +259,19 @@
             width: 50%;
             // @include testing-border-2;
             padding: 2rem;
+
+            @media screen and (max-width: 1000px) {
+                width: 95%;
+                margin: auto;
+            }
+
+            @media screen and (max-width: 580px) {
+                width: 100%;
+            }
+
+            @media screen and (max-width: 420px) {
+                padding: 1rem;
+            }
 
             h3{
                 text-align: center;
@@ -195,14 +295,21 @@
                 font-weight: bold;
                 text-decoration: underline;
                 position: relative;
-                margin-left: 5rem;
-                margin-top: 2rem;
                 display: block;
+
+                width: 20rem;
+                margin-left: calc(50% - 10rem);
+                margin-top: 3rem;
+                text-align: center;
 
                 &::before{
                     position: absolute;
                     left: -2rem;
                     content: '\279C';
+
+                    @media screen and (max-width: 580px) {
+                        display: none
+                    }
                 }
 
                 &:hover{
@@ -217,8 +324,16 @@
         &_left-side{
             order: 2;
 
+            @media screen and (max-width: 1000px) {
+                order: -1;
+            }
+
             img{
                 border-radius: 2rem 5rem; 
+
+                @media screen and (max-width: 1000px) {
+                    border-radius: 0;
+                }
             }
         }
     }
@@ -235,6 +350,14 @@
             height: 85svh;
             overflow: hidden;
             // margin-top: 2rem;
+
+            @media screen and (max-width: 920px) {
+                height: 80svh;
+            }
+
+            @media screen and (max-width: 620px) {
+                height: 78svh;
+            }
 
             img{
                 height: 70svh;
@@ -258,7 +381,16 @@
         &_description{
             width: 80%;
             margin: auto;
-            @include flex-row-between;
+            @include flex-row-center;
+            column-gap: 5%;
+
+            @media screen and (max-width: 1475px) {
+                width: 98%;
+            }
+
+            @media screen and (max-width: 920px) {
+                flex-direction: column;
+            }
 
             p{
                 max-width: 35rem;
@@ -266,6 +398,21 @@
                 border: solid var(--color-primary);
                 border-width: 0 0 0 2px;
                 // border-radius: 2rem
+
+                @media screen and (max-width: 1250px) {
+                    max-width: 45%;
+                }
+
+                
+                @media screen and (max-width: 920px) {
+                    max-width: 90%;
+                }
+
+                @media screen and (max-width: 650px) {
+                    width: 96%;
+                    max-width: initial;
+                    padding: 1rem;
+                }
             }
 
             dl{
@@ -273,12 +420,35 @@
                 @include flex-variable(row, wrap, space-between, center);
                 row-gap: .5rem;
 
+                @media screen and (max-width: 1250px) {
+                    max-width: 45%;
+                }
+
+                @media screen and (max-width: 920px) {
+                    max-width: 35rem;
+                    width: 35rem;
+                    margin: 3rem auto;
+                }
+
+                @media screen and (max-width: 620px) {
+                  width: 90%;
+                  max-width: initial;
+                //   margin: auto;
+                  flex-direction: column;
+                  align-items: flex-start;
+                }
+
                 dt{
                     width: 30%;
                 }
 
                 dd{
                     width: 60%;
+
+                    @media screen and (max-width: 620px) {
+                        margin: 1rem;
+                        width: 100%;
+                    }
                 }
             }
 
@@ -286,6 +456,10 @@
                 background-color: var(--color-primary);
                 padding-right: 1rem;
                 display: inline-block;
+
+                @media screen and (max-width: 620px) {
+                   padding-right: 5rem;
+                }
 
                 &::first-letter{
                     font-size: 1.1rem;
@@ -302,6 +476,22 @@
             @include flex-row-center;
             margin-top: 2rem;
 
+            @media screen and (max-width: 14750px) {
+                width: 98%;
+            }
+
+            @media screen and (max-width: 920px) {
+               width: 40rem;
+               margin: initial;
+            }
+
+            @media screen and (max-width: 650px) {
+                width: 90%;
+                margin: auto;
+                justify-content: flex-start;
+            }
+
+
             p{
                 // width: 100%;
                 font-weight: 600;
@@ -313,6 +503,13 @@
                 margin: 2rem;
                 text-decoration: underline;
                 font-weight: bold;
+
+                @media screen and (max-width: 1060px) {
+                    justify-content: flex-start;
+                    width: 30rem;
+                    gap: 1rem;
+                    margin: 1rem;
+                }
 
                 img{
                     width: 2.5rem;
